--- a/code/style.css
+++ b/code/style.css
@@ -110,3 +110,29 @@ body{
 {
   margin-left: 2%;
 }
+
+.img-responsive {
+  margin: 0 auto;
+}
+
+.caption
+{
+  font-weight: 100;
+  font-size: 100%;
+  padding: 0;
+  border: 0;
+
+}
+
+
+
+.thumbnail {
+padding: 0;
+border: 0;
+}
+
+.bold
+{
+  font-size: 150%;
+  font-weight: 300;
+}
