--- a/code/style.css
+++ b/code/style.css
@@ -67,17 +67,18 @@ body{
     color:darkturquoise;
     border-radius:10;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: -10px;
+    margin-top: 8%;
+    margin-bottom: -0%;
+    margin-right: 1%;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 110%;
 }
 
 .comp_comment
 {
-    margin-top: 30px;
-    margin-bottom: -5px;
-    margin-left: 30px;
+    margin-top: 3%;
+    margin-bottom: -2%;
+    margin-left: 1%;
 }
 
 .table
@@ -135,4 +136,14 @@ border: 0;
 {
   font-size: 150%;
   font-weight: 300;
+}
+
+.analysis
+{
+  margin-top:2%;
+}
+
+.text
+{
+  font-size:110%;
 }
